--- a/aula14ex/ex017/modelo/modelo.html
+++ b/aula14ex/ex017/modelo/modelo.html
@@ -16,6 +16,7 @@
         <div>
            <p>Número: <input type="number" name="num" id="txtn"> 
             <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p> 
+            <!--qd clicar botão gerar tabuada, vai disparar o evento onclick na função de nome tabuada() no JS-->
         </div>
         <div>
             <select name="tabuada" id="seltab" size="10"> <!--size 10 pq a tabuada tem 10 linhas-->
